--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Domain Checker</title>
+</head>
+<body>
+    <h1>Domain Checker</h1>
+    <label for="domainInput">Enter Domain:</label>
+    <input type="text" id="domainInput" placeholder="example.com">
+    <button onclick="checkDomain()">Check Domain</button>
+    <div id="result"></div>
 
+    <script src="script.js"></script>
+</body>
+</html>
